--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <body>
     <div class="wrapper">
       <form>
-        <input type="text" placeholder="Add item..." />
-        <button type="submit">+</button>
+        <input type="text" class="todo-input" placeholder="Add item..." />
+        <button class="todo-button" type="submit">+</button>
       </form>
 
-      <ul>
+      <ul class="todo-list">
         <li class="complete">
           <button class="done">&#10003;</button>
           <span>Buy apples</span>
@@ -30,5 +30,7 @@
         </div>
       </div>
     </div>
+
+    <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
