--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
           <span>Buy milk</span>
           <button class="delete">&#128465;</button>
         </li>
+        <li>
+          <button class="done">&#10003;</button>
+          <span>Buy eggs</span>
+          <button class="delete">&#128465;</button>
+        </li>
       </ul>
 
       <div class="actions">
